@@ -67,6 +67,9 @@ DOMAIN_STATE(intnat, requested_major_slice)
 DOMAIN_STATE(intnat, requested_minor_gc)
 DOMAIN_STATE(struct caml__roots_block *, local_roots)
 
+DOMAIN_STATE(caml_mask_kind, mask_async_callbacks)
+/* See signals.c */
+
 DOMAIN_STATE(double, stat_minor_words)
 DOMAIN_STATE(double, stat_promoted_words)
 DOMAIN_STATE(double, stat_major_words)
